[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scenes/Level/BossFinal/Boss.gd" type="Script" id=1]
[ext_resource path="res://player/shadow.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Level/BossFinal/Idle/Idle.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Level/BossFinal/Die/Die1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Level/BossFinal/Die/Die2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Level/BossFinal/Die/Die3.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Level/BossFinal/Attack/Attack1.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Level/BossFinal/Attack/Attack2.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Level/BossFinal/Attack/Attack3.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Level/BossFinal/Attack/Attack4.png" type="Texture" id=10]
[ext_resource path="res://Art/Sprite-0001.png" type="Texture" id=11]
[ext_resource path="res://player/DamageSource.tscn" type="PackedScene" id=12]
[ext_resource path="res://player/health/Health.tscn" type="PackedScene" id=13]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 6 ) ],
"loop": true,
"name": "Die",
"speed": 3.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="StyleBoxFlat" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.386719, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFontData" id=5]

hinting = 2
font_path = "res://Main Menu/Fonts/MyriadPro-BoldCond.otf"

[sub_resource type="DynamicFont" id=6]

size = 100
use_mipmaps = false
use_filter = false
font_data = SubResource( 5 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 40.6079

[sub_resource type="Animation" id=7]

resource_name = "Hide"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]

resource_name = "Show"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Boss" type="KinematicBody2D" groups=[
"Monsters",
]]

scale = Vector2( 0.5, 0.5 )
input_pickable = false
collision_layer = 2
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Shadow" type="Sprite" parent="." index="0"]

modulate = Color( 1, 1, 1, 0.270706 )
position = Vector2( 19.8726, 90.2062 )
scale = Vector2( 1.23358, 0.781072 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 1 )
animation = "Idle"
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="CanvasLayer" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Back" type="TextureRect" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 552.0
margin_right = 1019.0
margin_bottom = 572.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 11 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/Back" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_right = 1010.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 9 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Percent", "Radial Fill", "Textures", "custom_styles" ]

[node name="Name" type="Label" parent="CanvasLayer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 423.0
margin_top = 515.0
margin_right = 578.0
margin_bottom = 615.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Boss"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Collision" type="CollisionShape2D" parent="." index="3"]

position = Vector2( 20, 90.902 )
scale = Vector2( 1, 0.479316 )
shape = SubResource( 2 )

[node name="DamageSource" parent="." index="4" instance=ExtResource( 12 )]

[node name="Collision2" type="CollisionShape2D" parent="DamageSource" index="0"]

position = Vector2( 20, 90.902 )
scale = Vector2( 1, 0.479316 )
shape = SubResource( 2 )

[node name="Health" parent="." index="5" instance=ExtResource( 13 )]

max_health = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Hide = SubResource( 7 )
anims/Show = SubResource( 8 )
blend_times = [  ]

[node name="Timer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


